--- a/api/package.json
+++ b/api/package.json
@@ -13,20 +13,31 @@
   },
   "scripts": {
     "build": "nest build",
-    "start": "nest start --watch"
+    "start": "nest start --watch",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.9",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.9",
     "@nestjs/platform-express": "^10.3.9",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-typescript": "^7.24.7",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.10",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
