--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:prod": "ng serve --host 0.0.0.0 --configuration production",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
