--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -48,51 +48,51 @@ services:
   #     - sonar_db:/var/lib/postgresql
   #     - sonar_db_data:/var/lib/postgresql/data
 
-  jenkins:
-    image: jenkins/jenkins:lts
-    privileged: true
-    user: root
-    ports:
-      - 8080:8080
-      - 50000:50000
-    container_name: jenkins
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+#   jenkins:
+#     image: jenkins/jenkins:lts
+#     privileged: true
+#     user: root
+#     ports:
+#       - 8080:8080
+#       - 50000:50000
+#     container_name: jenkins
+#     volumes:
+#       - /var/run/docker.sock:/var/run/docker.sock
 
-  node_exporter:
-    image: quay.io/prometheus/node-exporter:latest
-    container_name: node_exporter
-    command:
-      - '--path.rootfs=/host'
-    network_mode: host
-    pid: host
-    restart: unless-stopped
-    volumes:
-      - '/:/host:ro,rslave'
-    # ports:
-    #   - 9100:9100
+#   node_exporter:
+#     image: quay.io/prometheus/node-exporter:latest
+#     container_name: node_exporter
+#     command:
+#       - '--path.rootfs=/host'
+#     network_mode: host
+#     pid: host
+#     restart: unless-stopped
+#     volumes:
+#       - '/:/host:ro,rslave'
+#     # ports:
+#     #   - 9100:9100
 
-  prometheus:
-    image: prom/prometheus
-    volumes:
-      - "./prometheus.yml:/etc/prometheus/prometheus.yml"
-    ports:
-      - 9090:9090
+#   prometheus:
+#     image: prom/prometheus
+#     volumes:
+#       - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+#     ports:
+#       - 9090:9090
 
-  grafana:
-    image: grafana/grafana-oss:latest
-    container_name: grafana-oss
-    ports:
-      - "3030:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=gustavo01
+#   grafana:
+#     image: grafana/grafana-oss:latest
+#     container_name: grafana-oss
+#     ports:
+#       - "3030:3000"
+#     environment:
+#       - GF_SECURITY_ADMIN_PASSWORD=gustavo01
 
 
-volumes:
-  sonarqube_conf:
-  sonarqube_data:
-  sonarqube_extensions:
-  sonarqube_logs:
-  sonarqube_temp:
-  sonar_db:
-  sonar_db_data:
+# volumes:
+#   sonarqube_conf:
+#   sonarqube_data:
+#   sonarqube_extensions:
+#   sonarqube_logs:
+#   sonarqube_temp:
+#   sonar_db:
+#   sonar_db_data:
