--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.1",
     "autoprefixer": "^10.4.19",
+    "cypress": "^13.13.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "typescript": "~5.4.5"
